fixed spacing and added portfolio descriptions

--- a/style.css
+++ b/style.css
@@ -18,11 +18,6 @@ ul {
 	padding-top: 80px;
 }
 
-/* Content Spacing */
-.content-spacing {
-	padding-bottom: 300px;
-}
-
 /* About Me*/
 #intro {
 	color: #007BFF;
@@ -43,9 +38,22 @@ ul {
 	font-weight: bold;
 }
 
+#bio {
+	margin-bottom: 200px;
+}
+
 .tech-stack {
 	color: #707070;
 	font-weight: bold;
+}
+
+/* Portfolio */
+#app-descr {
+	color: #707070;
+}
+
+#spacing {
+	margin-bottom: 250px;
 }
 
 /* Contact */
@@ -61,23 +69,22 @@ ul {
 	color: white;
 }
 
+#contact .slide-up {
+	margin-top: 50px;
+	padding-bottom: 250px;
+}
+
+#contact h3 {
+	margin-bottom: 30px;
+}
+
 /* Images */
 #headshot {
 	height: 70px;
 	width: 70px;
 }
 
-#communication {
-	height: 90px;
-	width: 90px;
-}
-
-#teamwork {
-	height: 90px;
-	width: 90px;
-}
-
-#curious {
+#communication, #teamwork, #curious {
 	height: 90px;
 	width: 90px;
 }
@@ -85,4 +92,9 @@ ul {
 #linkedin-icon, #github-icon {
 	height: 50px;
 	width: 50px;
+}
+
+#portfolio-img {
+	height: 100%;
+	width: 100%;
 }
